<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="defaultPosition">
<!--    tools:context=".CurrentOrderActivity">-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/order_number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_number"
        android:layout_width="160dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderTotalChip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/subtotalChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dollar_sign"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/orderTotalChip"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/sales_tax"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderButton"
        app:layout_constraintStart_toEndOf="@+id/subtotalChip"
        app:layout_constraintTop_toBottomOf="@+id/deletePizza"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="61dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/salesTaxChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dollar_sign"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderButton"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/orderTotalChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dollar_sign"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:text="@string/order_total_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currentOrderRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintBottom_toTopOf="@+id/deletePizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/deletePizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/delete_pizza"
        app:layout_constraintBottom_toTopOf="@+id/subtotalChip"
        app:layout_constraintEnd_toStartOf="@+id/clearOrder"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/clear_order"
        app:layout_constraintBottom_toTopOf="@+id/subtotalChip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deletePizza" />

</androidx.constraintlayout.widget.ConstraintLayout>