<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/addPizzaToOrderButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/chicagoPizzaImage"
                android:layout_width="180dp"
                android:layout_height="183dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/customize_pizza_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cs_byo" />

            <Spinner
                android:id="@+id/chicagoPizzaSize"
                android:layout_width="177dp"
                android:layout_height="0dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="16dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <!--            <com.google.android.material.chip.ChipGroup-->
<!--                android:id="@+id/toppingsChipGroup"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--                app:selectionRequired="false" />-->

            <Spinner
                android:id="@+id/chicagoPizzaFlavor"
                android:layout_width="177dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/toppings"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chicagoPizzaImage" />

            <TextView
                android:id="@+id/chicagoPizzaCrust"
                android:layout_width="152dp"
                android:layout_height="46dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:text="@string/chicago_Pan_crust"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chicagoPizzaSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ListView
        android:id="@+id/chiacgoToppingList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <Button
        android:id="@+id/chicagoOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_pizza_to_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chiacgoToppingList" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="39dp"
        android:layout_height="22dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="252dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPizzaToOrderButton" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chicagoPriceChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toStartOf="@+id/chicagoOrderButton"
        app:layout_constraintTop_toBottomOf="@+id/chiacgoToppingList" />

</androidx.constraintlayout.widget.ConstraintLayout>