<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="defaultPosition"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/chicagoStyleImage"
                android:layout_width="302dp"
                android:layout_height="178dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/chicago_style_image_name"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/chicagostyle" />

            <ImageView
                android:id="@+id/nyStyleImage"
                android:layout_width="302dp"
                android:layout_height="178dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ny_style_image_name"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderChicagoStyleLabel"
                app:srcCompat="@drawable/newyorkstyle" />

            <TextView
                android:id="@+id/orderChicagoStyleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:text="@string/chicago_style_image_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chicagoStyleImage" />

            <TextView
                android:id="@+id/orderNYStyleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/ny_style_image_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nyStyleImage" />

            <ImageView
                android:id="@+id/currentOrderImage"
                android:layout_width="76dp"
                android:layout_height="93dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/current_order_image"
                app:layout_constraintEnd_toStartOf="@+id/storeOrdersImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderNYStyleLabel"
                app:srcCompat="@drawable/currentorder" />

            <TextView
                android:id="@+id/currentOrderLabel"
                android:layout_width="107dp"
                android:layout_height="31dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/current_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/storeOrdersLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentOrderImage"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/storeOrdersImage"
                android:layout_width="80dp"
                android:layout_height="86dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/store_orders"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toEndOf="@+id/currentOrderImage"
                app:layout_constraintTop_toBottomOf="@+id/orderNYStyleLabel"
                app:srcCompat="@drawable/storeorder" />

            <TextView
                android:id="@+id/storeOrdersLabel"
                android:layout_width="107dp"
                android:layout_height="31dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/store_orders"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/currentOrderLabel"
                app:layout_constraintTop_toBottomOf="@+id/storeOrdersImage"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>